--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,11 +2,29 @@ body{
 	text-align: center;
 	font-family: Helvetica;
 }
-h1 {
-	font-size: 70px;
+h1, h2, h3 {
 	font-weight: bold;
-	color: white;
+}
+.nav-btn{
+	font-size: 18px;
+	color:white;
 }
 .image{
 	background-image: url("../images/the-flatiron-building.png");
+	color: white;
+}
+.process {
+	font-size: 32px;
+}
+.misc{
+	font-size: 23px;
+}
+p{
+	font-size: 14px;
+}
+.footer {
+	font-size: 11px;
+	text-align: left;
+	background-color: dimgray;
+	color:white;
 }
